--- a/THANKS
+++ b/THANKS
@@ -38,6 +38,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Gaspar Galaz                         ggalaz@astro.puc.cl
     Thérèse Godefroy                     godef.th@free.fr
     Madusha Gunawardhana                 gunawardhana@strw.leidenuniv.nl
+    Bruno Haible                         bruno@clisp.org
     Stephen Hamer                        stephen.hamer@univ-lyon1.fr
     Takashi Ichikawa                     ichikawa@astr.tohoku.ac.jp
     Raúl Infante Sainz                   infantesainz@gmail.com
