Book: dealing with time zones in sort-by-night script
With this commit, documentation about how to deal with difference in
time zones when using `sort-by-night' script has been improved.
Basically, it is explained how to modify the definition of "nights" when
clasifying and sorgint images taken from different nights with the help
of the argument `--hour'.

Since this commit has been done in a Mac OS system laptop, I also
include `.DS_Store' files to be ignored in `.gitignore'. This files are
created automatically by `Finder' application and they are irrelevant
for the git history. From Wikipedia: In the Apple macOS operating
system, .DS_Store is a file that stores custom attributes of its
containing folder, such as the position of icons or the choice of a
background image.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -10879,6 +10879,21 @@ the files (in that directory) will all start with @file{img-}.
 @end table
 
 
+@cartouche
+@noindent
+@strong{Dealing with time zones:} Time in @code{DATE-OBS} keyword in the
+header of the images is usually expressed in UTC (Universal Time Coordinate)
+time.  However, the organization of the images taken during the night used
+to be local time based. It is possible to take into account this time shift
+zone in the organization of the files with the @option{--hour} argument. For
+example, consider you have a set of images that were taken in Auckland (New
+Zeland, UTC+12) along different nights. If you want to organize these images
+by nights, you have to know at which time (in UTC time) Sun rises (or
+whatever consideration you need to make the definition of "different
+night"). In this particular example, you will set the argument
+@option{--hour=21}, because in this city, sunrise happens (roughly) at 21h
+UTC time.
+@end cartouche
 
 
 
